Adaptive keeping contnue

--- a/_app/pug/main/2-video.pug
+++ b/_app/pug/main/2-video.pug
@@ -6,7 +6,7 @@ section#video
 			.general-img.general-img-video-stars
 			+gt('general-title-video', 'Почему не только психологам необходимо изучить метод современной проективной психологии МАК')
 			.row
-				.col-md-9
+				.col-md-9.col-sm-9
 					ul.general-list
 						li Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.
 						li Экологично извлекают необходимую информацию не насилуя психику.
