--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -5,6 +5,8 @@
 	padding: 120px 0 250px
 	@media screen and (max-width 1199px)
 		padding 40px 0 120px
+	@media screen and (max-width 991px)
+		background: #D3D2D5 url(../img/backs/main-mid.png) no-repeat center
 .general-img-main-1
 	width 55px
 	height: 87px
