--- a/_app/styl/main/2-video.styl
+++ b/_app/styl/main/2-video.styl
@@ -34,6 +34,8 @@
 		height: 396px
 		top 150px
 		right -200px
+	@media screen and (max-width 991px)
+		right -280px
 .general-title-video
 	width 88%
 .video-content
