--- a/_app/styl/main/4-plan.styl
+++ b/_app/styl/main/4-plan.styl
@@ -13,6 +13,9 @@
 		height: 368px
 		right -100px
 		top -300px
+	@media screen and (max-width 991px)
+		right -180px
+		top -350px
 .general-img-plan-back
 	width 536px
 	height: 536px
@@ -48,6 +51,9 @@
 		height: 536px
 		bottom: -280px
 		right -250px
+	@media screen and (max-width 991px)
+		bottom: -50px
+		right -450px
 .days
 	display flex
 	align-items: flex-start
