--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -107,12 +107,17 @@ section
 	margin-bottom: 50px
 	color mP
 	line-height: 105%
+	@media screen and (max-width 991px)
+		font-size: 32px
+		margin-bottom: 40px
 .general-list
 	li
 		list-style: none
 		padding-left: 30px
 		margin-bottom: 30px
 		position relative
+		@media screen and (max-width 560px)
+			margin-bottom: 20px
 		&:last-child
 			margin-bottom: 0
 		span
