--- a/_app/styl/main/6-revs.styl
+++ b/_app/styl/main/6-revs.styl
@@ -17,6 +17,8 @@
 	max-width 940px
 	@media screen and (max-width 1199px)
 		max-width 770px
+	@media screen and (max-width 991px)
+		max-width 660px
 .revs-slider-text.slick-dotted.slick-slider
 	margin-bottom: 120px
 .slick-list
@@ -24,17 +26,16 @@
 	max-width 590px
 	margin 0 auto
 .text-rev-link
-	border: 3px solid #4E4C4C
-	border-radius: 45px
 	display block
-	margin 0 20px
+	margin 0 5px
 	overflow hidden
 .text-rev-img
+	border: 3px solid #4E4C4C
+	border-radius: 45px
 	width 100%
 	max-width 248px
 	margin 0 auto
 	display block
-	width 100%
 .slick-dots
 	bottom: -50px
 	left 0
@@ -47,6 +48,14 @@
 		border-radius: 50%
 		margin 0 10px
 		transition: all .6s ease
+		@media screen and (max-width 991px)
+			margin 0 5px
+			width 12px
+			height: 12px
+		@media screen and (max-width 560px)
+			margin 0 2px
+			width 7px
+			height: 7px
 		& button:before
 			content: none
 		&.slick-active
