--- a/_app/styl/main/7-modal.styl
+++ b/_app/styl/main/7-modal.styl
@@ -39,11 +39,10 @@
 	background-color: #fff
 	margin-bottom: 20px
 	@media screen and (max-width 1199px)
-		padding 17px
+		// padding 17px
 		font-size: 16px
 	@media screen and (max-width 991px)
 		border-color #fff
-		color rgba(#fff,.55)
 		&::-webkit-input-placeholder
 			color:rgba(#fff,.55)
 			opacity:1;
@@ -56,8 +55,8 @@
 		&:active
 		&:focus
 		&:active
-			border-color: #fff
-			color #fff
+			border-color: mP
+			color #4D4D4D
 	&::-webkit-input-placeholder
 		color:#4D4D4D
 		opacity:1;
@@ -110,11 +109,11 @@ input:-internal-autofill-selected
 	text-align: left;
 	font-size: 14px
 	color #4E4C4C
-	@media screen and (max-width 1199px)
-		font-size: 12px
-		line-height: 18px
-	@media screen and (max-width 560px)
-		font-size: 10px
+	// @media screen and (max-width 1199px)
+	// 	font-size: 12px
+	// 	line-height: 18px
+	// @media screen and (max-width 560px)
+	// 	font-size: 10px
 .checking .check-label a
 	text-decoration: none
 	border-bottom: 1px dashed
