--- a/_app/pug/main/3-about.pug
+++ b/_app/pug/main/3-about.pug
@@ -4,7 +4,7 @@ section#about
 			.general-img.general-img-about-back
 			.general-img.general-img-about-1
 			.general-img.general-img-about-2
-			+gt('', 'Почему психологам необходимо владеть метафорическими ассоциациативными картами?')
+			+gt('general-title-about', 'Почему психологам необходимо владеть метафорическими ассоциациативными картами?')
 			.abouts
 				.abouts-item
 					p.abouts-item-text Данный проективный метод не содержит в себе строгих норм и ограничений, направлен на качественный анализ. 
