--- a/_app/pug/main/4-plan.pug
+++ b/_app/pug/main/4-plan.pug
@@ -27,9 +27,11 @@ section#plan
 						li
 							span Авторские техники работы с метафорическими ассоциативными картами.
 				.day
+					.general-img.general-img-plan-1.general-img-plan-1-day
+					.general-img.general-img-plan-2.general-img-plan-2-day
 					h4.day-title День 3
 					ul.general-list
 						li Практические демонстрационные сессии по вашим запросам
 						li Разбираем любую проблематику с помощью метафорических ассоциативных карт
 						li Вы можете оставить заявку на разбор вашего вопроса Жанной Абрамовой на вебинаре, и лично принять в нем участие
-			+b('button-up', href, 'Записаться на мастер-класс')
+			+b('button-up', href, 'Записаться на&nbsp;мастер-класс')
