--- a/_app/pug/promo/1-main.pug
+++ b/_app/pug/promo/1-main.pug
@@ -8,7 +8,7 @@ section#main
 					p.main-text В нем вы сможете получать информацию о методах современной психологии. А также в канале вам будут приходить напоминания о старте мастер-класса, на который вы зарегистрировались, и ссылки на вебинарные комнаты.
 					p.main-text
 						span Присоединяйтесь
-					a.button.button-main(href='https://t.me/+CAwuyvO6BXVmNzli')
+					a.button.button-main(href='https://t.me/+hDZNaECfJ542Mjgy')
 						+imgs('', 'img/icons/tg.png','Telegram')
 						|  Присоединиться
 					p.main-text Обязательно оставляйте 
