--- a/_app/styl/base/2-base.styl
+++ b/_app/styl/base/2-base.styl
@@ -92,7 +92,7 @@ section
 	z-index 999
 	@media screen and (max-width 560px)
 		font-size: 18px
-		padding 16px 35px
+		padding 13px 35px
 	&:focus
 		text-decoration none
 		color #fff
@@ -110,6 +110,9 @@ section
 	@media screen and (max-width 991px)
 		font-size: 32px
 		margin-bottom: 40px
+	@media screen and (max-width 560px)
+		font-size: 26px
+		margin-bottom: 30px
 .general-list
 	li
 		list-style: none
