--- a/_app/styl/main/5-author.styl
+++ b/_app/styl/main/5-author.styl
@@ -1,5 +1,9 @@
 #author
 	padding 90px 0
+	@media screen and (max-width 991px)
+		padding 60px 0
+	@media screen and (max-width 560px)
+		padding: 0
 .general-title-dt
 	@media screen and (max-width 991px)
 		display none
@@ -32,6 +36,9 @@
 	@media screen and (max-width 1199px)
 		top 320px
 		left -20px
+	@media screen and (max-width 767px)
+		background: none
+		display none
 .author
 	&-img
 		display block
@@ -48,6 +55,7 @@
 			display none
 			@media screen and (max-width 560px)
 				display block
+				margin: 0 0 -30px 0
 	&-info
 		position relative
 		&-img
@@ -62,6 +70,8 @@
 	@media screen and (max-width 991px)
 		padding 0 0 50px
 		text-align left
+	@media screen and (max-width 560px)
+		padding 0
 	li
 		padding 0 40px 0 0
 		max-width 470px
@@ -69,7 +79,7 @@
 		@media screen and (max-width 991px)
 			padding 0 0 0 30px
 			max-width none
-			margin 0 0 20px
+			margin 0 0 20px !important
 		&:before
 			width 25px
 			height: 25px
