--- a/_app/styl/main/6-revs.styl
+++ b/_app/styl/main/6-revs.styl
@@ -2,6 +2,8 @@
 	padding 60px 0 150px
 	@media screen and (max-width 1199px)
 		padding 40px 0 150px
+	@media screen and (max-width 560px)
+		padding 40px 0 50px
 .general-img-revs-back
 	@media screen and (max-width 1199px)
 		width 536px
@@ -11,6 +13,9 @@
 		top -160px
 		left -50px
 		z-index -1
+	@media screen and (max-width 386px)
+		background: none
+		display none
 .slick-dotted.slick-slider
 	margin 0 auto
 	width 100%
@@ -19,8 +24,12 @@
 		max-width 770px
 	@media screen and (max-width 991px)
 		max-width 660px
+	@media screen and (max-width 767px)
+		max-width 590px
 .revs-slider-text.slick-dotted.slick-slider
 	margin-bottom: 120px
+	@media screen and (max-width 560px)
+		margin-bottom: 60px
 .slick-list
 	width 100%
 	max-width 590px
@@ -41,6 +50,8 @@
 	left 0
 	right 0
 	margin: 0 auto
+	@media screen and (max-width 560px)
+		bottom: -25px
 	li
 		width 16px
 		height: 16px
@@ -67,8 +78,12 @@
 	height: 46px
 	border-radius: 50%
 	transition: all .6s ease
+	z-index 20
 	&:before
 		content: none
+	@media screen and (max-width 560px)
+		width 30px
+		height: 30px
 .slick-prev
 	background: #F0DFFC url(../img/icons/prev.png) no-repeat center
 	background-size auto
@@ -76,6 +91,14 @@
 		background: #F0DFFC url(../img/icons/prev.png) no-repeat center
 	&:hover
 		background: #D9D9D9 url(../img/icons/prev.png) no-repeat center
+	@media screen and (max-width 767px)
+		left 0
+	@media screen and (max-width 560px)
+		background-size 10px
+.revs-slider-video
+	.slick-prev
+		@media screen and (max-width 767px)
+			left 4%
 .slick-next
 	background: #F0DFFC url(../img/icons/next.png) no-repeat center
 	background-size auto
@@ -83,3 +106,11 @@
 		background: #F0DFFC url(../img/icons/next.png) no-repeat center
 	&:hover
 		background: #D9D9D9 url(../img/icons/next.png) no-repeat center
+	@media screen and (max-width 767px)
+		right 0
+	@media screen and (max-width 560px)
+		background-size 10px
+.revs-slider-video
+	.slick-next
+		@media screen and (max-width 767px)
+			right 4%
