Main page is adapted

--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -7,17 +7,16 @@ section#main
 			.general-img.general-img-main-2
 			.date
 				.date-item
-					p.date-item-text
-						span 17-19
-						|  октября
+					p.date-item-text 17-19 
+						span октября
+				.date-item
+					p.date-item-text 19:00 
+						span МСК
 				.date-item
 					p.date-item-text
-						span 19:00
-						|  МСК
-				.date-item
-					p.date-item-text Бесплатный онлайн 
-						br
-						| мастер-класс
+						span  Бесплатный онлайн 
+							br
+							| мастер-класс
 			p.main-pre Проективный метод современной психологии
 			h1.main-title Метафоричекие ассоциативные карты
 			h2.main-subtitle решение самых сложных жизненных вопросов
