--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -7,6 +7,18 @@
 		padding 40px 0 120px
 	@media screen and (max-width 991px)
 		background: #D3D2D5 url(../img/backs/main-mid.png) no-repeat center
+	@media screen and (max-width 767px)
+		padding 40px 0 60px
+		background-position: center right 35%
+		background-size: cover
+	@media screen and (max-width 560px)
+		background-position: top right 35%
+	@media screen and (max-width 480px)
+		background: #D3D2D5 url(../img/backs/main-min.png) no-repeat center top 60%
+		background-size: cover
+	@media screen and (max-width 386px)
+		background-position: center top 50%
+		padding 20px 0 100px
 .general-img-main-1
 	width 55px
 	height: 87px
@@ -16,6 +28,13 @@
 	left 100px
 	@media screen and (max-width 1199px)
 		top -105px
+	@media screen and (max-width 560px)
+		width 35px
+		height: 55px
+		top auto
+		left auto
+		bottom: -20px
+		right 10px
 .general-img-main-2
 	width 32px
 	height: 50px
@@ -25,6 +44,8 @@
 	left -40px
 .date
 	display flex
+	@media screen and (max-width 767px)
+		flex-wrap: wrap
 	&-item
 		background-repeat: no-repeat
 		padding 0 40px
@@ -32,24 +53,60 @@
 		display flex
 		align-items: center
 		&:nth-of-type(1)
-			// padding 0 40px 0 60px
 			background-image: url(../img/icons/calendar.png)
 			background-position: center left
 		&:nth-of-type(2)
 			background-image: url(../img/icons/time.png)
-			// margin 0 40px
 			border-right: 3px solid mP
 			border-left: 3px solid mP
 			padding 0 40px 0 80px
-			background-position: center left 40px
+			background-position: center left 15px
+		@media screen and (max-width 767px)
+			padding 0
+			font-size: 16px
+			// flex-wrap: wrap
+			&:nth-of-type(1)
+				padding 0 15px 0 40px
+				// width 50%
+			&:nth-of-type(2)
+				// width 50%
+				border-right: 0
+				border-left-width: 2px
+				padding 0 15px 0 55px
+			&:nth-of-type(3)
+				width 100%
+				br
+					display none
+		@media screen and (max-width 386px)
+			font-size: 14px
+			&:nth-of-type(1)
+			&:nth-of-type(2)
+				background-size: 25px
+			&:nth-of-type(1)
+				padding 0 10px 0 30px
+			&:nth-of-type(2)
+				padding 0 0 0 40px
+				background-position: center left 10px
 		&-text
 			color mP
+			font-weight: bold
 			span
-				font-weight: bold
+				font-weight: normal
 .main
 	&-pre
 		font-size: 24px
 		margin 75px 0 20px
+		@media screen and (max-width 767px)
+			margin 40px 0 20px
+			font-size: 20px
+			width 59%
+		@media screen and (max-width 560px)
+			// width 100%
+			margin: 20px 0 10px
+		@media screen and (max-width 430px)
+			width 100%
+		@media screen and (max-width 386px)
+			margin-top: 40px
 	&-title
 		font-size: 50px
 		font-weight: bold
@@ -57,19 +114,48 @@
 		line-height: 100%
 		width 100%
 		max-width 550px
+		@media screen and (max-width 991px)
+			font-size: 46px
+		@media screen and (max-width 767px)
+			font-size: 36px
+			width 60%
+		@media screen and (max-width 460px)
+			margin-bottom: 40px
+		@media screen and (max-width 386px)
+			font-size: 32px
+			margin-bottom: 0
 	&-subtitle
 		font-size: 24px
 		width 100%
 		max-width: 290px
 		margin 25px 0 75px
+		@media screen and (max-width 767px)
+			margin 25px 0
+			font-size: 20px
+		@media screen and (max-width 560px)
+			margin 10px 0 25px
+			width 170px
 	&-author
 		position absolute
 		bottom: -120px
 		right 3%
 		font-size: 16px
 		max-width 152px
+		span
+			display block
 		@media screen and (max-width 1199px)
 			bottom: -60px
 			right 5%
-		span
-			display block
+		@media screen and (max-width 991px)
+			right -10px
+			bottom: -40px
+		@media screen and (max-width 767px)
+			position: static
+			margin-bottom: 50px
+			span
+				font-weight: bold
+		@media screen and (max-width 560px)
+			margin-bottom: 80px
+			width 100px
+		@media screen and (max-width 386px)
+			margin-bottom: 40px
