--- a/_app/styl/main/7-modal.styl
+++ b/_app/styl/main/7-modal.styl
@@ -9,6 +9,10 @@
 	background-size: 60px, 300px
 	width 100%
 	max-width 650px
+	@media screen and (max-width 560px)
+		background-position: bottom 10px left 20px, top right
+		background-size: 40px, 220px
+		padding 40px 20px
 .fancybox-slide--iframe .fancybox-content
 	background #000
 	width 100%
@@ -20,11 +24,14 @@
 	transition: all .5s ease
 	outline: 0
 	&:hover
-		transform: rotateY(180deg)
+		transform: rotate(45deg)
 .general-title-modal
 	text-align center
 	font-size: 28px
 	margin-bottom: 35px
+	@media screen and (max-width 560px)
+		font-size: 24px
+		margin-bottom: 20px
 .form-modal
 	width 100%
 	max-width 450px
@@ -34,29 +41,21 @@
 	width 100%
 	border: 2px solid mP;
 	border-radius: 50px;
-	padding 25px
+	padding 22px 25px
 	color: #4D4D4D;
 	background-color: #fff
 	margin-bottom: 20px
 	@media screen and (max-width 1199px)
 		// padding 17px
 		font-size: 16px
-	@media screen and (max-width 991px)
-		border-color #fff
-		&::-webkit-input-placeholder
-			color:rgba(#fff,.55)
-			opacity:1;
-		&::-moz-placeholder
-			color:rgba(#fff,.55)
-			opacity:1;
-		&:-ms-input-placeholder
-			color:rgba(#fff,.55)
-			opacity:1;
-		&:active
-		&:focus
-		&:active
-			border-color: mP
-			color #4D4D4D
+	@media screen and (max-width 560px)
+		padding 22px 20px
+		margin-bottom: 10px
+	&:active
+	&:focus
+	&:active
+		border-color: mP
+		color #4D4D4D
 	&::-webkit-input-placeholder
 		color:#4D4D4D
 		opacity:1;
@@ -79,6 +78,8 @@ input:-internal-autofill-selected
 	background-color: transparent !important
 .button-form
 	width 100%
+	@media screen and (max-width 560px)
+		padding 25px 20px
 .alert-message
 	clear both
 	display: none;
@@ -109,11 +110,9 @@ input:-internal-autofill-selected
 	text-align: left;
 	font-size: 14px
 	color #4E4C4C
-	// @media screen and (max-width 1199px)
-	// 	font-size: 12px
-	// 	line-height: 18px
-	// @media screen and (max-width 560px)
-	// 	font-size: 10px
+	@media screen and (max-width 560px)
+		font-size: 12px
+		line-height: 18px
 .checking .check-label a
 	text-decoration: none
 	border-bottom: 1px dashed
