--- a/css/styles.css
+++ b/css/styles.css
@@ -575,6 +575,34 @@ section {
     background: #d3d2d5 url("../img/backs/main-mid.png") no-repeat center;
   }
 }
+@media screen and (max-width: 767px) {
+  #main {
+    padding: 40px 0 60px;
+    background-position: center right 35%;
+    -webkit-background-size: cover;
+         -o-background-size: cover;
+            background-size: cover;
+  }
+}
+@media screen and (max-width: 560px) {
+  #main {
+    background-position: top right 35%;
+  }
+}
+@media screen and (max-width: 480px) {
+  #main {
+    background: #d3d2d5 url("../img/backs/main-min.png") no-repeat center top 60%;
+    -webkit-background-size: cover;
+         -o-background-size: cover;
+            background-size: cover;
+  }
+}
+@media screen and (max-width: 386px) {
+  #main {
+    background-position: center top 50%;
+    padding: 20px 0 100px;
+  }
+}
 .general-img-main-1 {
   width: 55px;
   height: 87px;
@@ -588,6 +616,16 @@ section {
 @media screen and (max-width: 1199px) {
   .general-img-main-1 {
     top: -105px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .general-img-main-1 {
+    width: 35px;
+    height: 55px;
+    top: auto;
+    left: auto;
+    bottom: -20px;
+    right: 10px;
   }
 }
 .general-img-main-2 {
@@ -606,6 +644,13 @@ section {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 767px) {
+  .date {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
 }
 .date-item {
   background-repeat: no-repeat;
@@ -631,17 +676,78 @@ section {
   border-right: 3px solid #613a7c;
   border-left: 3px solid #613a7c;
   padding: 0 40px 0 80px;
-  background-position: center left 40px;
+  background-position: center left 15px;
+}
+@media screen and (max-width: 767px) {
+  .date-item {
+    padding: 0;
+    font-size: 16px;
+  }
+  .date-item:nth-of-type(1) {
+    padding: 0 15px 0 40px;
+  }
+  .date-item:nth-of-type(2) {
+    border-right: 0;
+    border-left-width: 2px;
+    padding: 0 15px 0 55px;
+  }
+  .date-item:nth-of-type(3) {
+    width: 100%;
+  }
+  .date-item:nth-of-type(3) br {
+    display: none;
+  }
+}
+@media screen and (max-width: 386px) {
+  .date-item {
+    font-size: 14px;
+  }
+  .date-item:nth-of-type(1),
+  .date-item:nth-of-type(2) {
+    -webkit-background-size: 25px 25px;
+         -o-background-size: 25px;
+            background-size: 25px;
+  }
+  .date-item:nth-of-type(1) {
+    padding: 0 10px 0 30px;
+  }
+  .date-item:nth-of-type(2) {
+    padding: 0 0 0 40px;
+    background-position: center left 10px;
+  }
 }
 .date-item-text {
   color: #613a7c;
+  font-weight: bold;
 }
 .date-item-text span {
-  font-weight: bold;
+  font-weight: normal;
 }
 .main-pre {
   font-size: 24px;
   margin: 75px 0 20px;
+}
+@media screen and (max-width: 767px) {
+  .main-pre {
+    margin: 40px 0 20px;
+    font-size: 20px;
+    width: 59%;
+  }
+}
+@media screen and (max-width: 560px) {
+  .main-pre {
+    margin: 20px 0 10px;
+  }
+}
+@media screen and (max-width: 430px) {
+  .main-pre {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 386px) {
+  .main-pre {
+    margin-top: 40px;
+  }
 }
 .main-title {
   font-size: 50px;
@@ -651,11 +757,45 @@ section {
   width: 100%;
   max-width: 550px;
 }
+@media screen and (max-width: 991px) {
+  .main-title {
+    font-size: 46px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .main-title {
+    font-size: 36px;
+    width: 60%;
+  }
+}
+@media screen and (max-width: 460px) {
+  .main-title {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 386px) {
+  .main-title {
+    font-size: 32px;
+    margin-bottom: 0;
+  }
+}
 .main-subtitle {
   font-size: 24px;
   width: 100%;
   max-width: 290px;
   margin: 25px 0 75px;
+}
+@media screen and (max-width: 767px) {
+  .main-subtitle {
+    margin: 25px 0;
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .main-subtitle {
+    margin: 10px 0 25px;
+    width: 170px;
+  }
 }
 .main-author {
   position: absolute;
@@ -664,14 +804,40 @@ section {
   font-size: 16px;
   max-width: 152px;
 }
+.main-author span {
+  display: block;
+}
 @media screen and (max-width: 1199px) {
   .main-author {
     bottom: -60px;
     right: 5%;
   }
 }
-.main-author span {
-  display: block;
+@media screen and (max-width: 991px) {
+  .main-author {
+    right: -10px;
+    bottom: -40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .main-author {
+    position: static;
+    margin-bottom: 50px;
+  }
+  .main-author span {
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 560px) {
+  .main-author {
+    margin-bottom: 80px;
+    width: 100px;
+  }
+}
+@media screen and (max-width: 386px) {
+  .main-author {
+    margin-bottom: 40px;
+  }
 }
 #video {
   padding: 90px 0;
@@ -1776,6 +1942,15 @@ footer {
   width: 100%;
   max-width: 650px;
 }
+@media screen and (max-width: 560px) {
+  .modal {
+    background-position: bottom 10px left 20px, top right;
+    -webkit-background-size: 40px, 220px;
+         -o-background-size: 40px, 220px;
+            background-size: 40px, 220px;
+    padding: 40px 20px;
+  }
+}
 .fancybox-slide--iframe .fancybox-content {
   background: #000;
   width: 100%;
@@ -1792,14 +1967,22 @@ footer {
   outline: 0;
 }
 .fancybox-slide--html .fancybox-close-small:hover {
-  -webkit-transform: rotateY(180deg);
-     -moz-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .general-title-modal {
   text-align: center;
   font-size: 28px;
   margin-bottom: 35px;
+}
+@media screen and (max-width: 560px) {
+  .general-title-modal {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
 }
 .form-modal {
   width: 100%;
@@ -1812,7 +1995,7 @@ footer {
   border: 2px solid #613a7c;
   -webkit-border-radius: 50px;
           border-radius: 50px;
-  padding: 25px;
+  padding: 22px 25px;
   color: #4d4d4d;
   background-color: #fff;
   margin-bottom: 20px;
@@ -1822,27 +2005,16 @@ footer {
     font-size: 16px;
   }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 560px) {
   .input {
-    border-color: #fff;
+    padding: 22px 20px;
+    margin-bottom: 10px;
   }
-  .input::-webkit-input-placeholder {
-    color: rgba(255,255,255,0.55);
-    opacity: 1;
-  }
-  .input::-moz-placeholder {
-    color: rgba(255,255,255,0.55);
-    opacity: 1;
-  }
-  .input:-ms-input-placeholder {
-    color: rgba(255,255,255,0.55);
-    opacity: 1;
-  }
-  .input:active,
-  .input:focus {
-    border-color: #613a7c;
-    color: #4d4d4d;
-  }
+}
+.input:active,
+.input:focus {
+  border-color: #613a7c;
+  color: #4d4d4d;
 }
 .input::-webkit-input-placeholder {
   color: #4d4d4d;
@@ -1874,6 +2046,11 @@ input:-internal-autofill-selected {
 .button-form {
   width: 100%;
 }
+@media screen and (max-width: 560px) {
+  .button-form {
+    padding: 25px 20px;
+  }
+}
 .alert-message {
   clear: both;
   display: none;
@@ -1900,6 +2077,12 @@ input:-internal-autofill-selected {
   text-align: left;
   font-size: 14px;
   color: #4e4c4c;
+}
+@media screen and (max-width: 560px) {
+  .checking .check-label {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 .checking .check-label a {
   text-decoration: none;
