--- a/_app/styl/confirm.min.styl
+++ b/_app/styl/confirm.min.styl
@@ -1,18 +1,8 @@
 @import 'base/1-fonts'
 
 @import '../_css/bootstrap.min.css'
-@import '../_css/jquery.fancybox.min.css'
-@import '../_css/slick.css'
-@import '../_css/slick-theme.css'
 
 @import 'base/2-base'
 
-// @import 'base/3-header'
-@import 'main/1-main'
-@import 'main/2-video'
-@import 'main/3-about'
-@import 'main/4-plan'
-@import 'main/5-author'
-@import 'main/6-revs'
+@import 'confirm/1-main'
 @import 'base/4-footer'
-@import 'main/7-modal'
