--- a/_app/styl/confirm/1-main.styl
+++ b/_app/styl/confirm/1-main.styl
@@ -8,7 +8,7 @@
 .general-img-main-stars
 	width 494px
 	height: 372px
-	background: url(../img/images/plan-stars-1.png) no-repeat center
+	background: url(../img/images/plan-stars-2.png) no-repeat center
 	background-size contain
 	top 0
 	right -100px
@@ -28,8 +28,8 @@
 	height: 435px
 	background: url(../img/backs/blur.png) no-repeat center
 	background-size: contain
-	top -50px
-	left 0
+	top -100px
+	left -100px
 	@media screen and (max-width 560px)
 		width: 300px
 		height: 300px
@@ -37,27 +37,48 @@
 		top 0
 		left -60px
 .main-title
-	font-size: 30px
+	font-size: 36px
 	font-weight: bold
 	color mP
 	line-height: 110%
 	margin-bottom: 30px
 	@media screen and (max-width 991px)
-		font-size: 24px
+		font-size: 28px
 		margin-bottom: 20px
 	@media screen and (max-width 386px)
-		font-size: 20px
+		font-size: 24px
 .main-text
-	font-size: 20px
+	font-size: 22px
 	margin-bottom: 20px
 	line-height: 110%
 	@media screen and (max-width 991px)
-		font-size: 18px
+		font-size: 20px
 	@media screen and (max-width 386px)
-		margin-bottom: 10px
+		font-size: 18px
 	span
 		font-weight: bold
-.button-main
+.posts
 	margin-bottom: 35px
-	@media screen and (max-width 386px)
+	@media screen and (max-width 560px)
 		margin-bottom: 20px
+.post-link
+	display: inline-block;
+	margin-right: 30px;
+	transition: all .3s ease-out
+	@media screen and (max-width: 560px)
+		margin-right: 15px
+	@media screen and (max-width 386px)
+		margin-right: 10px
+.post-link:last-child
+	margin-right: 0
+.post-link:hover
+	transform: translateY(-8px)
+.post-icon
+	display: block;
+	width: 100%;
+	max-width: 83px;
+	margin: 0 auto
+	@media screen and (max-width: 560px)
+		max-width: 65px
+	@media screen and (max-width 386px)
+		max-width 45px
